starting page creadted and linked to game.html

--- a/game.html
+++ b/game.html
@@ -14,14 +14,8 @@
         <a href="/highscores.html" id="highscore">View high scores</a>
     </header>
     <div class="container">
-        <div id="home" class="flex-column flex-center"></div>
-        <h1>Coding Quiz Challenge</h1>
-        <p>
-            "Try to answer the following code-related questions within the time limit." <br />
-            "Keep in mind that incorrect answers will penalize your score/time by ten seconds!"<br />
-        </p>
-        <a href="game.html" class="btn">Start Quiz</a>
-        <script src="script.js"></script>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
