initial set up for Qs and As include CSS formatting

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <header>
-        <a href="/highscores.html" id="highscore">View high scores</a>
+        <a href="highscores.html" id="highscore">View high scores</a>
+        <a id="timer">Time:</a>
     </header>
     <div class="container">
         <div id="home" class="flex-column flex-center"></div>
@@ -21,7 +22,6 @@
             "Keep in mind that incorrect answers will penalize your score/time by ten seconds!"<br />
         </p>
         <a href="game.html" class="btn">Start Quiz</a>
-        <script src="script.js"></script>
 </body>
 
 </html>
