--- a/highscores.html
+++ b/highscores.html
@@ -12,16 +12,11 @@
 <body>
     <header>
         <a href="highscores.html" id="highscore">View high scores</a>
-        <a id="timer">Time:</a>
     </header>
-    <div class="containerquestions">
-        <h1 class="questions">What Javascript will I need to write to make this work??</h1>
-        <div class="choice1 btn ansbtn">1.</div>
-        <div class="choice2 btn ansbtn">2.</div>
-        <div class="choice3 btn ansbtn">3.</div>
-        <div class="choice4 btn ansbtn">4.</div>
-    </div>
-    <script src="script.js"></script>
+    <div class="container">
+        <div id="home" class="flex-column flex-center"></div>
+        <a href="index.html" class="btn">Go back</a>
+        <script src="script.js"></script>
 </body>
 
 </html>
