changed game.html to 'hidden' within index.html with css&javascript

--- a/game.html
+++ b/game.html
@@ -14,14 +14,19 @@
         <a href="highscores.html" id="highscore">View high scores</a>
         <a id="timer">Time:</a>
     </header>
-    <div class="containerquestions">
-        <h1 class="questions">What Javascript will I need to write to make this work??</h1>
-        <div class="choice1 btn ansbtn">1.</div>
-        <div class="choice2 btn ansbtn">2.</div>
-        <div class="choice3 btn ansbtn">3.</div>
-        <div class="choice4 btn ansbtn">4.</div>
-    </div>
+
+
     <script src="script.js"></script>
 </body>
 
 </html>
+
+<!--What I used on first attempt-->
+<!--<div class="containerquestions">
+    <h1 class="questions"></h1>
+    <div class="choice1 btn ansbtn" data-number="1">1.</div>
+    <div class="choice2 btn ansbtn" data-number="2">2.</div>
+    <div class="choice3 btn ansbtn" data-number="3">3.</div>
+    <div class="choice4 btn ansbtn" data-number="4">4.</div>
+</div>
+-->
