--- a/highscores.html
+++ b/highscores.html
@@ -14,8 +14,14 @@
         <a href="highscores.html" id="highscore">View high scores</a>
     </header>
     <div class="container">
-        <div id="home" class="flex-column flex-center"></div>
-        <a href="index.html" class="btn">Go back</a>
+        <h1>High scores</h1>
+        <div>
+            <!--high scores code here. look at password generator for help-->
+        </div>
+            <a href="index.html" class="btn">Go back</a>
+            <button class="btn">Clear high scores</button>
+        </div>
+
         <script src="script.js"></script>
 </body>
 
