--- a/highscores.html
+++ b/highscores.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Code-Quiz</title>
+    <title>High-Scores</title>
     <link rel="stylesheet" href=".\assets\css\style.css" />
 </head>
 
@@ -14,15 +14,16 @@
         <a href="highscores.html" id="highscore">View high scores</a>
     </header>
     <div class="container">
-        <h1>High scores</h1>
-        <div>
-            <!--high scores code here. look at password generator for help-->
-        </div>
+        <div id="highScores" class="flex-center flex-column">
+            <h1 id="finalScore">High Scores</h1>
+            <ul id="highScoresList"></ul>
             <a href="index.html" class="btn">Go back</a>
-            <button class="btn">Clear high scores</button>
         </div>
 
-        <script src="script.js"></script>
+        <button class="btn">Clear high scores</button>
+    </div>
+    </div>
+    <script src="./assets/js/highscores.js"></script>
 </body>
 
 </html>
