--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="highscores.html" id="highscore">View high scores</a>
-        <a id="timer">Time:</a>
+        <p id="timer">Time: 100</p>
     </header>
     <div class="home container" id="home">
         <div class="flex-column flex-center"></div>
@@ -35,7 +35,7 @@
             <div id="correct" class="hide correct">
                 <h2>Correct!</h2>
             </div>
-            <div id="wrong" class="hide">
+            <div id="wrong" class="hide wrong">
                 <h2>Wrong!</h2>
             </div>
         </div>
